profiling-using-exp-runner/backup_FINAL_RESULTS/hanoi_experiment_1/run_4_repetition_0/energibridge.log
sampling interval: 200, target function: tower_of_hanoi_cache, input size: 20
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.hanoi as module; X = 20; module.tower_of_hanoi_cache(X,A,C,B); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.71034552001953 for 0.23006552 sec of execution.
